cabal-version:   3.0
name:            aztecs-script
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      matt@hunzinger.me
author:          Matt Hunzinger
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Aztecs.Script
        Aztecs.Script.Decoder
        Aztecs.Script.Interpreter

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.20.0.0,
        aztecs,
        containers,
        parsec

executable aztecs-script
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.20.0.0,
        aztecs,
        aztecs-script

test-suite aztecs-script-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.20.0.0,
        aztecs-script
